# shapefinder

./: LICENSE  Multi_Shape_example.ipynb  README.md  Shape_with_covariates_example.ipynb  pyproject.toml  requirements.txt  setup.py  temp-plot.html  tox.ini
.github/workflows/: test.yml
examples/: 3D_example.ipynb
shapefinder/: __init__.py  shape.py  temp-plot.html  webapp.py
src/shapefinder/: shape.py
src/shapefinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: Output2D_store.pkl  Output3D_store.pkl  test_shape.py
test/Output/: 2D_store.pkl  3D_store.pkl
