[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapefinder"
version = "0.1.0"
description = "A tool to find patterns in time series dataset and forecast"
authors = [
  { name = "Thomas Schincariol", email = "thomas.schincariol@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "pandas==1.4.0",
    "matplotlib==3.5.2",
    "numpy==1.22.3",
    "scipy==1.10.1",
    "dtaidistance==2.3.11",
    "plotly==5.11.0",
    "POT==0.9.3"
]

keywords = ["python", "time series", "find", "pattern"]

[project.urls]
Homepage = "https://github.com/ThomasSchinca/shapefinder"   
Issues = "https://github.com/ThomasSchinca/shapefinder/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-ra -q"
